--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-loader-spinner": "^4.0.0",
+    "cookie": "^0.5.0",
+    "cookies-next": "^2.1.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-loader-spinner": "^5.3.4",
     "styled-components": "^5.3.6",
     "typescript": "4.9.5"
   },
