--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
+    "framer-motion": "^10.2.4",
     "styled-components": "^5.3.6",
     "typescript": "4.9.5"
   },
