--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookies-next": "^2.1.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
+    "framer-motion": "^10.2.4",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
