--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@js-temporal/polyfill": "^0.4.3",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -23,7 +24,6 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
-    "framer-motion": "^10.2.4",
     "styled-components": "^5.3.6",
     "typescript": "4.9.5"
   },
