--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.26"
+    "@types/d3": "^7.4.0",
+    "@types/styled-components": "^5.1.26",
+    "d3": "^7.8.2"
   }
 }
